--- a/debian/control
+++ b/debian/control
@@ -8,11 +8,11 @@ Uploaders: Andreas Metzler <ametzler@debian.org>,
  James Westby <jw+debian@jameswestby.net>,
  Simon Josefsson <simon@josefsson.org>
 Build-Depends: debhelper (>= 9), nettle-dev (>= 3.1), zlib1g-dev,
- libtasn1-6-dev (>= 4.3), autotools-dev, guile-2.0-dev [!ia64 !m68k],
+ libtasn1-6-dev (>= 4.3), guile-2.0-dev [!ia64 !m68k],
  datefudge <!nocheck>, dpkg-dev (>= 1.17.14),
  libp11-kit-dev (>= 0.23.1), pkg-config, chrpath, libidn11-dev (>= 1.31),
- autogen (>= 1:5.16-0), bison, dh-autoreconf, libgmp-dev (>= 2:6),
- libopts25-dev, automake (>= 1:1.12.2)
+ autogen (>= 1:5.16-0), bison, libgmp-dev (>= 2:6),
+ libopts25-dev
 # The b-d on libgmp-dev is not technically necessary, since nettle brings
 # it along. However we want to enforce that gnutls is only built if the
 # dual-licensed GMP is available, otherwise the resulting binary
