--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Uploaders: Andreas Metzler <ametzler@debian.org>,
  Simon Josefsson <simon@josefsson.org>
 Build-Depends: debhelper (>= 9), nettle-dev (>= 3.1), zlib1g-dev,
  libtasn1-6-dev (>= 4.3),
- datefudge, dpkg-dev (>= 1.17.14),
+ datefudge,
  libp11-kit-dev (>= 0.23.1), pkg-config, chrpath,
  autogen (>= 1:5.16-0), bison, libgmp-dev (>= 2:6),
  libopts25-dev
