--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Uploaders: Andreas Metzler <ametzler@debian.org>,
 Build-Depends: debhelper (>= 9), nettle-dev (>= 3.1), zlib1g-dev,
  libtasn1-6-dev (>= 4.3),
  datefudge,
- libp11-kit-dev (>= 0.23.1), pkg-config, chrpath,
+ pkg-config, chrpath,
  autogen (>= 1:5.16-0), bison, libgmp-dev (>= 2:6),
  libopts25-dev
 # The b-d on libgmp-dev is not technically necessary, since nettle brings
@@ -32,7 +32,7 @@ Depends: libgnutls30 (= ${binary:Version}),
  libgnutls-openssl27 (= ${binary:Version}),
  libgnutlsxx28 (= ${binary:Version}), 
  nettle-dev, libc6-dev | libc-dev, zlib1g-dev,
- libtasn1-6-dev, libp11-kit-dev, ${misc:Depends}
+ libtasn1-6-dev, ${misc:Depends}
 Suggests: gnutls-doc, gnutls-bin
 Conflicts: gnutls-dev
 Replaces: gnutls-dev
